home page updated

--- a/index.html
+++ b/index.html
@@ -16,5 +16,38 @@
 				</ul>				
 			</nav>
 		</div>
+	<div id="contentwrapper">
+		<div class = "description">
+			<div class = "first">
+				<img src="http://2.bp.blogspot.com/-_V9R9O0UZmo/Uy5-iJB7xlI/AAAAAAAAGHI/jsbjE1E4PIs/s1600/pratirodh-feature-1.png" style="width:20em; height:10em;"/>
+				<p>
+					<b> About Us </b>
+				</p>
+				<p>	
+					Asha for Education is a fully volunteer-run 501(c)(3) non-profit with 66 chapters around the world whose mission is to catalyze socio-economic change in India through the education of underprivileged children. We support more than 300 projects across India.
+				</p>	
+			</div>
+			<div class = "second">
+				<img src= "http://4.bp.blogspot.com/-pdGSPyZDHNo/Uy5-iB-9CJI/AAAAAAAAGHE/9--K5wYp_lE/s1600/gramya-feature-1.png"style="width:20em; height:10em;"/>
+				<p>
+					<b> Our Projects </b>
+				</p>
+				<p>
+					We work with over 300 projects spread across the length and breadth of India. The projects deal with educational issues from pre-primary schooling to professional education in locations from urban slums to isolated rural areas.
+				</p>
+			</div>
+			<div class = "third">
+				<img src="http://4.bp.blogspot.com/-TYdcbMjqQjM/UrAP94a5FjI/AAAAAAAAFXs/jVa2bmldAQQ/s1600/holi3.jpg" style="width:20em; height:10em;"/>
+				<p>
+					<b> How You Can Help </b>
+				</p>
+				<p>
+					You can help us in our mission in a variety of ways. You can join a local chapter, get involved with projects in India at an intimate level with the Asha Stars program, help us with our fundraising efforts, visit a project in India, intern with us or our project partners or Donate!
+				</p>
+			</div>			
+		</div>
+	</div>
+		<div id="footer"> Copyright: 2015 Asha for Education. All rights reserved
+		</div>
 	</body>
 </html>
