Added javascript to incude header in all pages, updated index.html and gallery.html

--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script type="text/javascript" src="js/include.js"></script>
 	</head>
 	<body>
-		<iframe src="header.html" width="100%"></iframe>
+		<!-- <iframe src="header.html" width="100%"></iframe> -->
 		<div class= "right">
 			<div>
 			<h1>Objectives</h1>
@@ -22,10 +23,14 @@ To address, whenever possible, other issues affecting human life such as health 
 			<h1>Our Story</h1>
 				In the summer of 1991, a few students including V.J.P.Srivatsavoy @ , D. Gupta # , and S. Pandey *  got together to think of ways in which they could play a role in the development of India, the country of their origin. These young people shared the belief that education is a critical requisite and an effective catalyst for social and economic change in India. Basic education became the agenda for the action group that emerged from this gathering. The group was named  Asha  to represent the  hope  that had brought these individuals together and the hope that they aimed to bring into the lives of children in India. In that summer of 1991, Asha was born at the University of California in Berkeley.
 		</div>
-	</div>
+		</div>
 			<div class="img">
 			<img src="group.png">
 			<img src="marathon.png">
-			</div>
+		</div>
+		<div id="footer">
+			&copy; Copyright: 2015 Asha for Education. All rights reserved
+		</div>
+
 	</body>
 </html>
