--- a/index.html
+++ b/index.html
@@ -3,41 +3,22 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<title>Home - Asha</title>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script type="text/javascript" src="js/include.js"></script>
 	</head>
 	<body>
-		<div class="topbar">
-			<img src="images/asha_logo.png" id="logo">
-			<nav id="navbar">
-				<ul class="nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="about.html">About Us</a></li>
-					<li><a href="mailto:contactus@asha.org">Contact Us</a></li>
-				</ul>				
-			</nav>
-		</div>
-	<div id="contentwrapper">
 		<div class = "description">
-			<div class = "first">
-				<img src="http://2.bp.blogspot.com/-_V9R9O0UZmo/Uy5-iJB7xlI/AAAAAAAAGHI/jsbjE1E4PIs/s1600/pratirodh-feature-1.png" style="width:20em; height:10em;"/>
-				<p>
-					<b> About Us </b>
-				</p>
+				<img src="http://2.bp.blogspot.com/-_V9R9O0UZmo/Uy5-iJB7xlI/AAAAAAAAGHI/jsbjE1E4PIs/s1600/pratirodh-feature-1.png" class="block_img">
+				<img src= "http://4.bp.blogspot.com/-pdGSPyZDHNo/Uy5-iB-9CJI/AAAAAAAAGHE/9--K5wYp_lE/s1600/gramya-feature-1.png" class="block_img">
+				<img src="http://4.bp.blogspot.com/-TYdcbMjqQjM/UrAP94a5FjI/AAAAAAAAFXs/jVa2bmldAQQ/s1600/holi3.jpg" class="block_img">
+				<br>
+			<div class = "blocks">
 				<p>	
 					Asha for Education is a fully volunteer-run 501(c)(3) non-profit with 66 chapters around the world whose mission is to catalyze socio-economic change in India through the education of underprivileged children. We support more than 300 projects across India.
 				</p>	
-			</div>
-			<div class = "second">
-				<img src= "http://4.bp.blogspot.com/-pdGSPyZDHNo/Uy5-iB-9CJI/AAAAAAAAGHE/9--K5wYp_lE/s1600/gramya-feature-1.png"style="width:20em; height:10em;"/>
-				<p>
-					<b> Our Projects </b>
-				</p>
 				<p>
 					We work with over 300 projects spread across the length and breadth of India. The projects deal with educational issues from pre-primary schooling to professional education in locations from urban slums to isolated rural areas.
 				</p>
-			</div>
-			<div class = "third">
-				<img src="http://4.bp.blogspot.com/-TYdcbMjqQjM/UrAP94a5FjI/AAAAAAAAFXs/jVa2bmldAQQ/s1600/holi3.jpg" style="width:20em; height:10em;"/>
 				<p>
 					<b> How You Can Help </b>
 				</p>
@@ -46,8 +27,9 @@
 				</p>
 			</div>			
 		</div>
-	</div>
-		<div id="footer"> Copyright: 2015 Asha for Education. All rights reserved
+		<br><br>
+		<div id="footer">
+			&copy; Copyright: 2015 Asha for Education. All rights reserved
 		</div>
 	</body>
 </html>
