--- a/gallery.html
+++ b/gallery.html
@@ -10,22 +10,28 @@
 		<!-- <iframe src="header.html" width="100%" scrolling="no" seamless="seamless" frameBorder="0"></iframe> -->
 		<div id="includedContent"></div>
 			<h3>Site Visit to Village</h3>
-			<img src="images/1.png" class="event_gallery">
- 			<img src="images/2.png" class="event_gallery">
-			<img src="images/3.png" class="event_gallery" >
-			<img src="images/4.png" class="event_gallery" >
+		<div class="event_gallery">
+			<img src="images/1.png">
+ 			<img src="images/2.png">
+			<img src="images/3.png">
+			<img src="images/4.png">
+		</div>
 			<hr style="clear:both">
  			<h3>Dodgeball Fundraiser</h3>
-			<img src="images/6.jpg" class="event_gallery">
-			<img src="images/7.jpg" class="event_gallery">
-			<img src="images/9.jpg" class="event_gallery">
-			<img src="images/10.jpg" class="event_gallery">
+		<div class="event_gallery">
+			<img src="images/6.jpg">
+			<img src="images/7.jpg">
+			<img src="images/9.jpg">
+			<img src="images/10.jpg">
+		</div>
 			<hr style="clear:both">
 			<h3>Site visit to Orphanage</h3>
-			<img src="images/13.jpg" class="event_gallery">
-			<img src="images/14.jpg" class="event_gallery">
-			<img src="images/15.jpg" class="event_gallery">
-			<img src="images/16.jpg" class="event_gallery">
+		<div class="event_gallery">
+			<img src="images/13.jpg">
+			<img src="images/14.jpg">
+			<img src="images/15.jpg">
+			<img src="images/16.jpg">
+		</div>
 		<div id="footer">
 			&copy; Copyright: 2015 Asha for Education. All rights reserved
 		</div>
